--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
   <title>Page Title</title>
 </head>
 <body>
-  <script src="rps.js">
-    console.log(computerPlay());
+  <script src="rps-ui.js" defer>
   </script>
+  <div id="playerChoices">
+    <button class="btn" id="rockButton">ROCK</button>
+    <button class="btn" id="paperButton">PAPER</button>
+    <button class="btn" id="scissorButton">SCISSORS</button>
+  </div>
+
+  <div id="roundResult">
+
+  </div id="scoreBoard">
+    <div id = "playerScoreDisplay">
+
+    </div>
+    <div id = "computerScoreDisplay">
+
+    </div>
+
+  </div>
+
+  <div id = "endGameMessage">
+
+  </div>
 </body>
 </html>
